tests/bad_programs/type_errors/deep_bad_return.nc
int main() {
    if (true) {
        return 0;
    } else {
        if (true) {
            return 1;
        } else {
            if (true) {
                return 2;
            } else {
                if (true) {
                    return 3;
                } else {
                    if (true) {
                        return 4;
                    } else {
                        return "FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF";
                    }
                }
            }
        }
    }
    return 5;
}
